# ChangeLog for net-misc/gwget2
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/gwget2/Attic/ChangeLog,v 1.9 2004/04/14 02:23:48 khai Exp $

*gwget2-0.10 (13 Apr 2004)

  13 Apr 2004; <khai@gentoo.org> gwget2-0.10.ebuild:
  Version bump, closes #47712. Removed the nls comments, seems to be working now.

  25 Mar 2004; David Holm <dholm@gentoo.org> gwget2-0.9.ebuild:
  Added to ~ppc.

*gwget2-0.9 (25 Mar 2004)

  25 Mar 2004; Markus Nigbur <pyrania@gentoo.org> gwget2-0.9.ebuild:
  Version bump. Closing bug #40001.

*gwget2-0.8 (16 Dec 2003)

  16 Dec 2003; Mike Gardiner <obz@gentoo.org> gwget2-0.5.ebuild,
  gwget2-0.8.ebuild:
  New release, as requested on bug #34917. nls still breaks

*gwget2-0.7 (11 Nov 2003)

  11 Nov 2003; foser <foser@gentoo.org> gwget2-0.7.ebuild :
  New release requested in #32916
  disable nls USE for now, it breaks

*gwget2-0.6 (28 Sep 2003)

  28 Sep 2003; Mike Gardiner <obz@gentoo.org> gwget2-0.5.ebuild,
  gwget2-0.6.ebuild:
  New version, marked 0.5 stable on x86

  13 Aug 2003; Mike Gardiner <obz@gentoo.org> metadata.xml:
  Added metadata.xml

  13 Aug 2003; Mike Gardiner <obz@gentoo.org> gwget2-0.5.ebuild:
  Moved gettext dependency to DEPEND, general clean up

*gwget2-0.5 (13 Aug 2003)

  13 Aug 2003; Mike Gardiner <obz@gentoo.org> gwget2-0.5.ebuild:
  New package. Thanks to Jose Romildo Malaquias (romildo@iber.com.br). See bug
  #18255
