@@ -1,12 +1,14 @@
+MD5 8a0c5751359f2c726ec3bc8a9d54ee38 gwget2-0.11.ebuild 1095
 MD5 b9b9af6a3474aee0cf18f78db00dfccb gwget2-0.9.ebuild 1183
-MD5 3e58cbd8e383e066184fdaeaff9d62fb gwget2-0.6.ebuild 1107
-MD5 d9390b581fc14956d360f651db6f3ad2 gwget2-0.8.ebuild 1181
-MD5 0309db0d69059c385b19ebced8456f78 gwget2-0.7.ebuild 1144
+MD5 14c9a5d3a9fedb88153a6ad93f9485b0 gwget2-0.6.ebuild 1106
+MD5 7edc8fd42f64cc31f2d441e774082985 gwget2-0.8.ebuild 1182
+MD5 9056258c825dabb32c0fe1438bfe8fbb gwget2-0.7.ebuild 1143
 MD5 4e91794886efe2e46e43f86e87e56427 gwget2-0.10.ebuild 1095
 MD5 d24d7cd4a1e718be29f31d6a07824412 metadata.xml 598
-MD5 f5e38351f9bb316954d1d0c543520bd6 ChangeLog 1460
+MD5 5fdca1194d2c6653bebd517042c0c64f ChangeLog 1568
 MD5 1f48614db94467a3d2842b4d8d4be1fc files/digest-gwget2-0.6 62
 MD5 cc0543c0039985ab50e92eb8c12c427d files/digest-gwget2-0.8 62
 MD5 59629971afeed7bafa3663a5de38e95d files/digest-gwget2-0.10 63
 MD5 2e082afa12c22715675a4bb82c357847 files/digest-gwget2-0.9 62
 MD5 2d7ab051d71f247182d6540fc535e44f files/digest-gwget2-0.7 62
+MD5 f26cfb40d5eb9ff17c0ec296c288eba5 files/digest-gwget2-0.11 63
