@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/gwget2/Attic/gwget2-0.7.ebuild,v 1.1 2003/11/11 13:30:42 foser Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/gwget2/Attic/gwget2-0.7.ebuild,v 1.2 2004/05/31 23:06:02 khai Exp $
 
 inherit gnome2
 
