@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/gwget2
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/gwget2/Attic/ChangeLog,v 1.9 2004/04/14 02:23:48 khai Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/gwget2/Attic/ChangeLog,v 1.10 2004/05/31 23:06:02 khai Exp $
+
+*gwget2-0.11 (31 May 2004)
+
+  31 May 2004; Yi Qiang <khai@gentoo.org> +gwget2-0.11.ebuild:
+  Version bump
 
 *gwget2-0.10 (13 Apr 2004)
 
